# bench-ws

./: .gitignore  .gitmodules  README.md  client.js  compose.yaml  package-lock.json  package.json  requirements.txt  server-bun.js  server-deno.mjs  server-node.js  server-python.py  server-uws.js  server-zig.zig
server-bun/: Dockerfile
server-cpp/: .gitignore  CMakeLists.txt  Dockerfile  server-cpp.cpp  server-cpp.sln  server-cpp.vcxproj  server-cpp.vcxproj.filters  thread-pool.cpp  vcpkg.json
server-cpp/server-cpp/x64/Debug/: server-cpp.exe.recipe  vc143.idb
server-cpp/server-cpp/x64/Debug/server-cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  server-cpp.lastbuildstate
server-cpp/server-cpp/x64/Release/: server-cpp.exe.recipe  server-cpp.ipdb
server-cpp/server-cpp/x64/Release/server-cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  server-cpp.lastbuildstate
server-cpp/src/: main.cpp
server-csharp/: Dockerfile  Program.cs  server-csharp.csproj
server-dart/: Dockerfile  pubspec.yaml
server-dart/lib/: server.dart
server-deno/: Dockerfile  server.mjs
server-erlang/: LICENSE.md  README.md  rebar.config
server-erlang/apps/server_erlang/: rebar.config
server-erlang/apps/server_erlang/src/: server_erlang.app.src  server_erlang_app.erl  server_erlang_sup.erl  websocket_handler.erl  websocket_server_app.erl  websocket_server_sup.erl
server-erlang/config/: sys.config  vm.args
server-go/: go.mod  server-gorilla.go  server.go
server-go/server-fasthttp/: Dockerfile  go.mod  go.sum  server.go
server-go/server-gorilla/: Dockerfile  go.mod  server.go
server-java/: .gitignore  Dockerfile  pom.xml
server-java/src/main/java/com/server/: App.java  WebSocketChatServer.java
server-node/: Dockerfile  package.json  server.js
server-node-wt/: server.js
server-python/: Dockerfile  requirements.txt  server-python.py
server-ruby/: Dockerfile  Gemfile  server.rb
server-rust/: .gitignore  Cargo.toml  Dockerfile
server-rust/src/: main.rs
server-swoole/: Dockerfile  server.php
server-uwebsocket/: Dockerfile  package.json  server.js
server-zig/: Dockerfile  build.zig  build.zig.zon
server-zig/src/: main.zig
server_elixir/: .gitignore  Dockerfile  README.md  mix.exs
server_elixir/lib/: server_elixir.ex
server_elixir/lib/server_elixir/: application.ex  clients.ex  router.ex  websocket_handler.ex
